2009-02-13  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkdisplay-x11.c (gdk_display_open): Don't forget to
	register randr events. Found by Søren Sandmann

2009-02-13  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Check for Xrandr 1.3

	* gdk/x11/gdkdisplay-x11.[ch]: Rename have_randr12 to have_randr13
	and set if if we have randr 1.3

	* gdk/x11/gdkscreen-x11.c: Go back to using randr for monitor
	information, if we have XRRGetScreenResourcesCurrent.
:
2009-02-12  Cody Russell  <bratsche@gnome.org>

	Bug 571576 – gdk_pixbuf_save_to_stream() broken

	* gdk-pixbuf/gdk-pixbuf-io.c: Fix gdk_pixbuf_save_to_stream() so that
	it does not always return FALSE (even when it succeeds), and also so
	that it does not set error to NULL when something goes wrong.

2009-02-12  Marek Kasik  <mkasik@redhat.com>

	Bug 568571 – Asian am/pm format on cups print backend's time parsing

	* modules/printbackends/cups/gtkprintbackendcups.c: Add Asian am/pm
	format into formats recognized by CUPS backend

2009-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 570824 – [a11y] TreeView is not keyboard (re)focusable after 
	selecting a cell in a non-sortable column

	* gtk/gtktreeview.c (gtk_tree_view_header_focus): Don't grab
	focus to a header button if it is not focusable. Problem reported
	by Joanmarie Diggs

2009-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 508545 – No way to identify terminal classes from documentation

	* gtk/gtkvolumebutton.[hc]: Move the _GtkVolumeButton definition
	into the header to make it possible to derive from GtkVoumeButton.
	Reported by Chris Lord.

2009-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 571196 – gtk_binding_entry_add_signall deprecated without 
	alternative
	* gtk/gtk.symbols:
	* gtk/gtkbindings.[hc]: Undeprecate gtk_binding_entry_add_signall
	since its replacement is a varargs function. Complaint by
	Torsten Schoenfeld.

2009-02-11  Matthias Clasen  <mclasen@redhat.com>
